# 12a-3DLowLevelControl-FixedWheels

./: CMakeLists.txt  Controller.cpp  Controller.hpp  Main.cpp  MyWindow.cpp  MyWindow.hpp  fixed_wheel_sim_data.m  params.cfg
data/0001-NoPDCOntrol/: plot.fig  th_log
data/0002-PDControl/: plot.fig  th_log
data/0003-PDControl [wait before start, not any better]/: plot.fig  th_log
data/0004-thOffset/: plot.fig  th_log
data/0005-Kp = 50, Kv = 100, ten times that earlier/: plot.fig  th_log
data/0006-Kp=15, Kv=30/: plot.fig  th_log
data/0007-Kp=12.5,Kv=30/: plot.fig  th_log
data/0008-Kp=50,Kv=25/: plot.fig  th_log
data/0009-Kp=5,Kv=25 [best]/: plot.fig  th_log
